[gd_scene load_steps=6 format=3 uid="uid://ctj6tidq7e615"]

[ext_resource type="Script" path="res://Home/SchoolManager/EditStudent.gd" id="1_ldk3g"]
[ext_resource type="StyleBox" uid="uid://b4r6ml4yts6gy" path="res://Assets/ButtonColor/GreenButtonNormal.tres" id="1_swbid"]
[ext_resource type="StyleBox" uid="uid://ck1raeeejtfaw" path="res://Assets/ButtonColor/GreenButtonHover.tres" id="2_coke2"]
[ext_resource type="StyleBox" uid="uid://cxt3p1cqhcx1g" path="res://Assets/ButtonColor/RedButtonNormal.tres" id="3_lsw8s"]
[ext_resource type="StyleBox" uid="uid://b1vp12avcsa6q" path="res://Assets/ButtonColor/RedButtonHover.tres" id="4_xalme"]

[node name="EditStudent" type="CenterContainer"]
custom_minimum_size = Vector2i(1200, 80)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_ldk3g")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(1460, 60)
offset_top = 10.0
offset_right = 1460.0
offset_bottom = 70.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(1460, 20)
offset_top = 10.0
offset_right = 1460.0
offset_bottom = 70.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2i(5, 60)
offset_right = 5.0
offset_bottom = 60.0
color = Color(0.572549, 0.619608, 1, 1)

[node name="VBoxContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1000, 0)
offset_left = 9.0
offset_right = 1009.0
offset_bottom = 60.0

[node name="StudentBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(960, 40)
offset_left = 20.0
offset_top = 10.0
offset_right = 980.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Student" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
offset_top = 7.0
offset_right = 87.0
offset_bottom = 33.0
text = "Estudiante:"

[node name="StudentLabel" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
custom_minimum_size = Vector2i(480, 0)
offset_left = 107.0
offset_top = 7.0
offset_right = 587.0
offset_bottom = 33.0
text = "INSERTE NOMBRE"
clip_text = true

[node name="Grade" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
offset_left = 607.0
offset_top = 7.0
offset_right = 661.0
offset_bottom = 33.0
text = "Curso: "

[node name="LevelAndGrade" type="Label" parent="VBoxContainer/VBoxContainer/StudentBox"]
custom_minimum_size = Vector2i(160, 0)
offset_left = 681.0
offset_top = 7.0
offset_right = 841.0
offset_bottom = 33.0
text = "Primero basico"
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(242, 60)
offset_left = 1013.0
offset_right = 1443.0
offset_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
offset_top = 10.0
offset_right = 430.0
offset_bottom = 50.0
theme_override_constants/separation = 30

[node name="EditStudent" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 40)
offset_right = 200.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("1_swbid")
theme_override_styles/hover = ExtResource("2_coke2")
text = "Editar Estudiante"

[node name="DeleteStudent" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 40)
offset_left = 230.0
offset_right = 430.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("3_lsw8s")
theme_override_styles/hover = ExtResource("4_xalme")
text = "Eliminar Estudiante"

[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/EditStudent" to="." method="_on_edit_student_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/DeleteStudent" to="." method="_on_delete_student_pressed"]
